# kicad-git

./: .gitignore  README.md  dev-requirements.txt  index.html  metadata.json  packages.json  pyproject.toml  pytest.ini  repository.json
.circleci/: config.yml
release/: deploy.sh  release.sh
source/: __init__.py  git.py  git_dialog.py  git_plugin_action.py
tests/: conftest.py  pytest.ini  test_git.py  test_plugin.py
